# rosbag-experiment

./: CMakeLists.txt  numeric_data_generator.cpp  package.xml  run_rosbag_experiment.cpp  std_msgs_utility.hpp
include/rosbag_experiment/: numeric_data_generator.hpp
launch/: generate_data.launch  replay_numeric.launch
perspectives/: visual_generated_data.perspective
src/: numeric_data_generator.cpp  run_rosbag_experiment.cpp
